# grid-sample

./: Cargo.toml  README.md
benches/: sample.rs
criterion/cube/base/: estimates.json  sample.json
criterion/cube/new/: benchmark.json  tukey.json
criterion/cube/report/: index.html
criterion/report/: index.html
criterion/wgsl/base/: estimates.json
criterion/wgsl/new/: benchmark.json  sample.json  tukey.json
criterion/wgsl/report/: index.html
src/: lib.rs
src/kernel/: backend.rs  forward.rs  kernel.rs  kernel.wgsl  mod.rs
